# github-manager

./: CHANGELOG.md  CMakeLists.txt  README.md  install.py  uninstall.py
resources/: github-manager.desktop
resources/styles/: dark.qss
scripts/: expand_ts_contexts.py  translator_to_ts.py
src/: main.cpp
src/core/: SecureStorage.cpp  SecureStorage.h  Settings.cpp  Settings.h  TimeFormatting.h  Translator.cpp  Translator.h
src/git/: CommitSigner.cpp  CommitSigner.h  GitHandler.cpp  GitHandler.h  GitWorker.cpp  GitWorker.h  SignatureVerifier.cpp  SignatureVerifier.h  SshKeyInfo.h
src/github/: GitHubClient.cpp  GitHubClient.h  LinkHeaderParser.h  OAuthResponseParser.h  Repository.h  SshUrlConverter.h
src/session/: OAuthFlowController.cpp  OAuthFlowController.h  SessionController.cpp  SessionController.h
src/ui/: AddRemoteDialog.cpp  AddRemoteDialog.h  AddRemoteParser.h  AddSubmoduleDialog.cpp  AddSubmoduleDialog.h  BranchNameValidator.h  ChangelogDialog.cpp  ChangelogDialog.h  CloneDialog.cpp  CloneDialog.h  ConflictResolutionDialog.cpp  ConflictResolutionDialog.h  CreateBranchDialog.cpp  CreateBranchDialog.h  DiffViewWidget.cpp  DiffViewWidget.h  HostKeyApprovalDialog.cpp  HostKeyApprovalDialog.h  HostKeyApprover.cpp  HostKeyApprover.h  IdentityDialog.cpp  IdentityDialog.h  LocalRepositoryWidget.cpp  LocalRepositoryWidget.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  OAuthLoginDialog.cpp  OAuthLoginDialog.h  PublishToGitHubDialog.cpp  PublishToGitHubDialog.h  ReflogDialog.cpp  ReflogDialog.h  RememberedKeysDialog.cpp  RememberedKeysDialog.h  RepoNameSuggester.h  RepositoryDetailWidget.cpp  RepositoryDetailWidget.h  RepositoryListWidget.cpp  (+21 more)
src/workspace/: ConflictController.cpp  ConflictController.h  GitHubCloneController.cpp  GitHubCloneController.h  LocalWorkspaceController.cpp  LocalWorkspaceController.h  PublishController.cpp  PublishController.h
tests/: CMakeLists.txt  TempRepo.h  test_AddRemoteParser.cpp  test_BranchNameValidator.cpp  test_GitHandler.cpp  test_LinkHeaderParser.cpp  test_OAuthResponseParser.cpp  test_RepoNameSuggester.cpp  test_SshKeyInfo.cpp  test_SshUrlConverter.cpp
translations/: github-manager_de.ts  github-manager_es.ts  github-manager_fr.ts  github-manager_pl.ts
